Passed Lab0 assignment

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ Makefile
 cmake_install.cmake
 CTestTestfile.cmake
 compile_commands.json
+/cmake-build-default-remote-host
+/.idea
+/.clion.source.upload.marker
